utoipa-gen/tests/snapshots/schema_derive_test__derive_unnamed_structs_with_examples-2.snap
---
source: utoipa-gen/tests/schema_derive_test.rs
expression: doc
snapshot_kind: text
---
{
  "$ref": "#/components/schemas/Username"
}
