utoipa-gen/tests/snapshots/schema_derive_test__derive_untagged_with_unit_variant.snap
---
source: utoipa-gen/tests/schema_derive_test.rs
expression: value
snapshot_kind: text
---
{
  "oneOf": [
    {
      "format": "int32",
      "type": "integer"
    },
    {
      "default": null,
      "type": "null"
    }
  ]
}
