utoipa-gen/tests/snapshots/schema_derive_test__new_type_struct_exclusive_maximum.snap
---
source: utoipa-gen/tests/schema_derive_test.rs
expression: value
---
{
  "exclusiveMaximum": 100,
  "format": "int64",
  "type": "integer"
}
