utoipa-gen/tests/snapshots/schema_derive_test__new_type_struct_exclusive_minimum.snap
---
source: utoipa-gen/tests/schema_derive_test.rs
expression: value
---
{
  "exclusiveMinimum": -100,
  "format": "int32",
  "type": "integer"
}
