utoipa-gen/tests/snapshots/schema_derive_test__new_type_struct_max_items.snap
---
source: utoipa-gen/tests/schema_derive_test.rs
expression: value
---
{
  "items": {
    "type": "string"
  },
  "maxItems": 5,
  "type": "array"
}
