utoipa-gen/tests/snapshots/schema_derive_test__new_type_struct_max_length.snap
---
source: utoipa-gen/tests/schema_derive_test.rs
expression: value
---
{
  "maxLength": 32,
  "type": "string"
}
