utoipa-gen/tests/snapshots/schema_derive_test__new_type_struct_maximum.snap
---
source: utoipa-gen/tests/schema_derive_test.rs
expression: value
---
{
  "format": "int32",
  "maximum": 100,
  "minimum": 0,
  "type": "integer"
}
