utoipa-gen/tests/snapshots/schema_derive_test__new_type_struct_min_items.snap
---
source: utoipa-gen/tests/schema_derive_test.rs
expression: value
---
{
  "items": {
    "type": "string"
  },
  "minItems": 1,
  "type": "array"
}
