utoipa-gen/tests/snapshots/schema_derive_test__new_type_struct_min_length.snap
---
source: utoipa-gen/tests/schema_derive_test.rs
expression: value
---
{
  "minLength": 3,
  "type": "string"
}
