utoipa-gen/tests/snapshots/schema_derive_test__new_type_struct_minimum.snap
---
source: utoipa-gen/tests/schema_derive_test.rs
expression: value
---
{
  "format": "int32",
  "minimum": -100,
  "type": "integer"
}
